<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.otp_verify"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="297dp"
                android:layout_height="72dp"
                android:text="@string/enter_otp1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView5"
                app:layout_constraintVertical_bias="0.100000024" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="363dp"
                android:layout_height="267dp"
                android:elevation="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/otp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView8"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                app:cardBackgroundColor="#E0EAFF"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.18">

                <EditText
                    android:id="@+id/editTextotp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nobackground"
                    android:ems="10"
                    android:hint="@string/enter_otp"
                    android:inputType="phone"
                    android:paddingStart="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="#787878"
                    android:autofillHints="" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginStart="80sp"
                android:layout_marginEnd="80sp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView8"
                app:layout_constraintVertical_bias="0.38">

                <Button
                    android:id="@+id/otp_verify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#5255F1"
                    android:text="@string/verify01"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>